--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Members Room</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+<!-- start header -->
+
+<!-- end header -->
+
+<!--start body -->
+
+<!--end body -->
+
+<!-- start footer -->
+
+
+<!-- end footer -->
 </body>
 </html>
