--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Members Room</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <!-- start header -->
-
+<nav>
+    <div class="logo">
+        <a href="#"><img src="images/room_logo.png" alt="" width="100%"></a>
+    </div>
+    <ul>
+        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Home</a></li>
+    </ul>
+</nav>
 <!-- end header -->
 
 <!--start body -->
