--- a/index.html
+++ b/index.html
@@ -16,14 +16,17 @@
     </div>
     <ul>
         <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Gallery</a></li>
+        <li><a href="#"><i class="fa fa-phone"></i> Contact Us</a></li>
     </ul>
 </nav>
 <!-- end header -->
+<div class="container">
 
+</div>
 <!--start body -->
+<div class="bg-white">
     <table>
         <thead>
             <tr>
@@ -117,10 +120,10 @@
         </tbody>
     </table>
 <!--end body -->
-
 <!-- start footer -->
 
 
 <!-- end footer -->
+</div>
 </body>
 </html>
